[workspace]
default-members = ["crates/kr"]

members = [
    "crates/kr",
    "crates/ssh-agent"
]

[workspace.dependencies]
clap = "3.0.0-beta.2"
tokio = { version = "1.45.0", features = ["full"] }
sodiumoxide = "0.2.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = "1.0.140"
serde-xml-rs = "0.6.0"
async-trait = "0.1.88"
base64 = "0.22.1"
base64-serde = "0.7.0"
thiserror = "2.0.12"
rusoto = "0.24.2"
rusoto_core = { version = "0.48.0", default_features = false, features = ["rustls"] }
rusoto_sqs = { version = "0.48.0", default_features = false, features = ["rustls"] }
rusoto_sns = { version = "0.48.0", default_features = false, features = ["rustls"] }
futures = "0.3.28"
chrono = "0.4.41"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
env_logger = "0.10.2"
log = "0.4.27"
byteorder = "1.5.0"
whoami = "1.6.0"
qr2term = "0.3.3"
eagre-asn1 = "0.3.0"
reqwest = { version = "0.12.15", default_features = false, features = ["json", "rustls-tls"] }
askama = "0.12.1"
notify-rust = "4.11.7"
run_script = "0.10.1"
ansi_term = "0.12.1"
directories = "5.0.1"
dirs = "5.0.1"
urlencoding = "2.1.3"
nix = "0.29.0"
openssl = "0.10.72"
bitflags = "2.9.0"
ecdsa = "0.16.9"
ring = "0.17.14"
untrusted = "0.9.0"
pem = "2.0.1"
osshkeys = "0.7.0"

# macOS
mac-notification-sys = "0.6.4"
