[package]
name = "akr"
description = "Akamai MFA Developer CLI and SSH Agent"
version = "1.1.1"
authors = ["Alex Grinman <agrinman@akamai.com>"]
edition = "2018"
license = "All Rights Reserved, Akamai Technologies"

[[bin]]
name = "akr"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
tokio = { version = "1.0", features = ["full"] }
ssh_agent = { path = "../ssh-agent" }
sodiumoxide = "0.2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.42"
base64 = "0.13.0"
base64-serde = "0.6.1"
serde_bytes =  "0.11.5"
thiserror = "1.0"
rusoto = "0.24"
rusoto_core = { version = "0.46.0", default_features = false, features = ["rustls"] }
rusoto_sqs = { version = "0.46.0", default_features = false, features = ["rustls"] }
rusoto_sns = { version = "0.46.0", default_features = false, features = ["rustls"] }
futures = "0.3"
chrono = "0.4.19"
uuid = { version = "0.8", features = ["serde", "v4"] }
env_logger = "0.8.2"
byteorder = "1.3.4"
whoami = "1.0.0"
qr2term = "0.2.1"
eagre-asn1 = "0.3.0"
reqwest = { version = "0.11.0", default_features = false, features = ["json", "rustls-tls"] }
askama = "0.10.5"
notify-rust = "4.5.2"
run_script = "0.8.0"
ansi_term = "0.12.1"
directories = "3.0.2"
dirs = "3.0.2"
serde-xml-rs = "0.5.0"
urlencoding = "2.1.0"
nix = "0.22.1"
openssl = "0.10"
bitflags = "1"
ecdsa = "0.13.4"
ring = "0.16.20"
untrusted = "0.9.0"
pem = "1.0.2"
osshkeys = "0.6.0"
[target.'cfg(target_os="macos")'.dependencies]
mac-notification-sys = "0.3.0"

[package.metadata.generate-rpm]
assets = [
        { source = "target/release/akr", dest = "/usr/bin/akr", mode = "0755" },
]

[package.metadata.deb]
assets = [
    ["target/release/akr", "usr/bin/akr", "755"],
]
