[package]
name = "akr"
description = "Akamai MFA Developer CLI and SSH Agent"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "akr"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
tokio.workspace = true
ssh_agent = { path = "../ssh-agent" }
sodiumoxide.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
base64.workspace = true
base64-serde.workspace = true
serde_bytes.workspace = true
thiserror.workspace = true
futures.workspace = true
chrono.workspace = true
uuid.workspace = true
env_logger.workspace = true
byteorder.workspace = true
whoami.workspace = true
qr2term.workspace = true
eagre-asn1.workspace = true
reqwest.workspace = true
askama.workspace = true
notify-rust.workspace = true
run_script.workspace = true
ansi_term.workspace = true
directories.workspace = true
dirs.workspace = true
serde-xml-rs.workspace = true
urlencoding.workspace = true
nix.workspace = true
openssl.workspace = true
bitflags.workspace = true
ecdsa.workspace = true
ring.workspace = true
untrusted.workspace = true
pem.workspace = true
osshkeys.workspace = true

[target.'cfg(target_os="macos")'.dependencies]
mac-notification-sys.workspace = true

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/akr", dest = "/usr/bin/akr", mode = "0755" },
]

[package.metadata.deb]
assets = [
    ["target/release/akr", "usr/bin/akr", "755"],
]
