[package]
name = "ssh_agent"
version = "0.1.0"
authors = ["Nicolas Trippar <ntrippar@gmail.com>", "Alex Grinman <me@alexgr.in>"]
edition = "2021"

[lib]
name = "ssh_agent"
path = "src/lib.rs"

[dependencies]
log.workspace = true
env_logger.workspace = true
byteorder.workspace = true
tokio.workspace = true
async-trait.workspace = true
