[package]
name = "ssh_agent"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "ssh_agent"
path = "src/lib.rs"

[dependencies]
log.workspace = true
env_logger.workspace = true
byteorder.workspace = true
tokio.workspace = true
async-trait.workspace = true
